fixed up ITypeAccessor functionality and created extension methods to access it's functionality directly from any object

--- a/Zirpl.Common/Linq/Dynamic Expressions.html
+++ b/Zirpl.Common/Linq/Dynamic Expressions.html
@@ -1102,10 +1102,10 @@ class=SpellE><span style='color:#2B91AF'>DateTime</span></span>)) };<br>
 class=SpellE><span style='color:#2B91AF'>DynamicExpression</span>.CreateClass</span>(props);<br>
 <span style='color:blue'>object</span> <span class=SpellE>obj</span> = <span
 class=SpellE><span style='color:#2B91AF'>Activator</span>.CreateInstance</span>(type);<br>
-<span class=SpellE>t.GetProperty</span>(<span style='color:#A31515'>&quot;Name&quot;</span>).<span
+<span class=SpellE>t.GetPropertyValue</span>(<span style='color:#A31515'>&quot;Name&quot;</span>).<span
 class=SpellE>SetValue</span>(<span class=SpellE>obj</span>, <span
 style='color:#A31515'>&quot;Albert&quot;</span>, <span style='color:blue'>null</span>);<br>
-<span class=SpellE>t.GetProperty</span>(<span style='color:#A31515'>&quot;Birthday&quot;</span>).<span
+<span class=SpellE>t.GetPropertyValue</span>(<span style='color:#A31515'>&quot;Birthday&quot;</span>).<span
 class=SpellE>SetValue</span>(<span class=SpellE>obj</span>, <span
 style='color:blue'>new</span> <span class=SpellE><span style='color:#2B91AF'>DateTime</span></span>(1879,
 3, 14), <span style='color:blue'>null</span>);<br>
